--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     </head>
 
     <body>
-        <img src="images/1.jpg" alt="">
-        <img src="images/2.jpg" alt="">
-        <img src="images/3.jpg" alt="">
-        <img src="images/4.jpg" alt="">
+        <div class="row">
+            <div class="col-md-3">
+                <img src="images/1.jpg" alt="">
+            </div>
+            <div class="col-md-3">
+                <img src="images/2.jpg" alt="">
+            </div>
+            <div class="col-md-3">
+                <img src="images/3.jpg" alt="">
+            </div>
+            <div class="col-md-3">
+                <img src="images/4.jpg" alt="">
+            </div>
+        </div>
 
     </body>
 </html>
