--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     </head>
 
     <body>
-        <div class="row">
+        <div class="container">
             <div class="col-md-3">
-                <img src="images/1.jpg" alt="">
+                <img src="images/1.jpg" alt="Image1" width="300" height="200">
             </div>
             <div class="col-md-3">
-                <img src="images/2.jpg" alt="">
+                <img src="images/2.jpg"  alt="Image2" width="300" height="200">
             </div>
             <div class="col-md-3">
-                <img src="images/3.jpg" alt="">
+                <img src="images/3.jpg"  alt="Image3" width="300" height="200">
             </div>
             <div class="col-md-3">
-                <img src="images/4.jpg" alt="">
+                <img src="images/4.jpg"  alt="Image4" width="300" height="200">
             </div>
         </div>
 
