Add panel in index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
             <div class="col-md-3">
                 <img src="images/4.jpg"  alt="Image4" width="300" height="200">
             </div>
+
+            <div class="clearfix"></div>
+
+            <div class="panel">
+                <div class="panel-heading">
+                    Panel Header
+                </div>
+                <div class="panel-body">
+                    <img src="images/1.jpg" alt="" width="200" height="200">
+                </div>
+                <div class="panel-footer">
+                    Footer
+                </div>
+            </div>
         </div>
 
     </body>
