--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
             </div>
         </div>
 
+        <div class="clearfix"></div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Panel Heading
+            </div>
+            <div class="panel-body">
+                Panel Body
+            </div>
+        </div>
+
     </body>
 </html>
